--- a/.travis.yml
+++ b/.travis.yml
@@ -165,9 +165,7 @@ script:
   - export ORG=(${TRAVIS_REPO_SLUG//\// })
 
   # Debug push operation
-  - echo "org=[${ORG}] : event=[${TRAVIS_EVENT_TYPE}] : push=[${PUSH_BUILT_DOCS}]"
-
-  # Meaningless change.
+  - echo "org=${ORG} : event=${TRAVIS_EVENT_TYPE} : push=${PUSH_BUILT_DOCS}"
 
   # When we merge a change to SciTools/iris, we can push docs to github pages.
   # At present, only the Python 3.7 "doctest" job does this.
