--- a/.travis.yml
+++ b/.travis.yml
@@ -172,4 +172,6 @@ script:
   - >
     if [[ "${ORG}" == 'pp-mo' && "${TRAVIS_EVENT_TYPE}" == 'push' && "${PUSH_BUILT_DOCS}" == 'true' ]]; then
       echo "====PUSH DOCS HERE====";
+    else
+      echo "=== SKIPPED DOCS-PUSH ===";
     fi
