--- a/.travis.yml
+++ b/.travis.yml
@@ -164,7 +164,22 @@ script:
   # Split the organisation out of the slug. See https://stackoverflow.com/a/5257398/741316 for description.
   - >
     export ORG=(${TRAVIS_REPO_SLUG//\// });
-    echo "org=${ORG} : event=${TRAVIS_EVENT_TYPE} : push=${PUSH_BUILT_DOCS}"
+    echo "org=:${ORG}:, event=:${TRAVIS_EVENT_TYPE}:, push=:${PUSH_BUILT_DOCS}:"
+    if [[ "${ORG}" == 'pp-mo' ]]; then
+      echo "ORG match";
+    else
+      echo "ORG nomatch";
+    fi;
+    if [[ "${TRAVIS_EVENT_TYPE}" == 'push' ]]; then
+      echo "EV match";
+    else
+      echo "EV nomatch";
+    fi;
+    if [[ "${PUSH_BUILT_DOCS}" == 'true' ]]; then
+      echo "PUSH true";
+    else
+      echo "PUSH untrue";
+    fi;
 
   # When we merge a change to SciTools/iris, we can push docs to github pages.
   # At present, only the Python 3.7 "doctest" job does this.
