--- a/.travis.yml
+++ b/.travis.yml
@@ -164,7 +164,7 @@ script:
   # Split the organisation out of the slug. See https://stackoverflow.com/a/5257398/741316 for description.
   - >
     export ORG=(${TRAVIS_REPO_SLUG//\// });
-    echo "org=:${ORG}:, event=:${TRAVIS_EVENT_TYPE}:, push=:${PUSH_BUILT_DOCS}:"
+    echo "org=:${ORG}:, event=:${TRAVIS_EVENT_TYPE}:, push=:${PUSH_BUILT_DOCS}:";
     if [[ "${ORG}" == 'pp-mo' ]]; then
       echo "ORG match";
     else
