--- a/.travis.yml
+++ b/.travis.yml
@@ -162,10 +162,10 @@ script:
     fi
 
   # Split the organisation out of the slug. See https://stackoverflow.com/a/5257398/741316 for description.
+  - export ORG=(${TRAVIS_REPO_SLUG//\// })
+  - echo "org=:${ORG}:, event=:${TRAVIS_EVENT_TYPE}:, push=:${PUSH_BUILT_DOCS}:"
   - >
-    export ORG=(${TRAVIS_REPO_SLUG//\// });
-    echo "org=:${ORG}:, event=:${TRAVIS_EVENT_TYPE}:, push=:${PUSH_BUILT_DOCS}:";
-    if [[ "${ORG}" == 'pp-mo' ]]; then
+    if [[ "${ORG}" == 'pp-mo' && 1 == 1 ]]; then
       echo "ORG match";
     else
       echo "ORG nomatch";
