Debug SLUG contents.

--- a/.travis.yml
+++ b/.travis.yml
@@ -163,6 +163,7 @@ script:
 
   # Split the organisation out of the slug. See https://stackoverflow.com/a/5257398/741316 for description.
   - >
+    echo "SLUG=:${TRAVIS_REPO_SLUG}:";
     ORG=(${TRAVIS_REPO_SLUG//\// });
     export ORG;
     echo "Check ORG=${ORG}";
