--- a/.travis.yml
+++ b/.travis.yml
@@ -164,9 +164,9 @@ script:
   # Split the organisation out of the slug. See https://stackoverflow.com/a/5257398/741316 for description.
   - >
     echo "SLUG=:${TRAVIS_REPO_SLUG}:";
-    ORG=(${TRAVIS_REPO_SLUG//\// });
+    ORG=$(echo ${TRAVIS_REPO_SLUG} | cut -d/ -f1);
     export ORG;
-    echo "Check ORG=${ORG}";
+    echo "Check ORG=${ORG}"
 
   - echo "Following command: check ORG=${ORG}"
 
