--- a/.travis.yml
+++ b/.travis.yml
@@ -164,7 +164,7 @@ script:
   # Split the organisation out of the slug. See https://stackoverflow.com/a/5257398/741316 for description.
   - >
     echo "SLUG=:${TRAVIS_REPO_SLUG}:";
-    ORG="pp-mo";
+    export ORG=$(cat ${TRAVIS_REPO_SLUG} | cut -d/ -f1);
     echo "Check ORG=${ORG} ."
 
   - >
