--- a/.github/workflows/ci-linkchecks.yml
+++ b/.github/workflows/ci-linkchecks.yml
@@ -18,9 +18,7 @@ jobs:
         uses: lycheeverse/lychee-action@v2
         with:
           fail: false
-        args:
-          - "./docs/**/*.rst"
-#          - "./docs/**/*.inc"
+          args: "./docs/**/*.rst"
 
       - name: Create Issue From File
         if: steps.lychee.outputs.exit_code != 0
