--- a/.github/workflows/ci-linkchecks.yml
+++ b/.github/workflows/ci-linkchecks.yml
@@ -17,7 +17,7 @@ jobs:
         id: lychee
         uses: lycheeverse/lychee-action@f613c4a64e50d792e0b31ec34bbcbba12263c6a6
         with:
-          fail: true
+          fail: false
           args: "--verbose './docs/**/*.rst' './docs/**/*.inc' './lib/**/*.py'"
 
       - name: Create Issue From File
@@ -27,3 +27,8 @@ jobs:
           title: Link Checker Report
           content-filepath: ./lychee/out.md
           labels: report, automated issue
+
+      - name: Fail Workflow On Link Errors
+        if: steps.lychee.outputs.exit_code != 0
+        run:
+          exit {{ steps.lychee.outputs.exit_code }}
