--- a/.github/workflows/ci-linkchecks.yml
+++ b/.github/workflows/ci-linkchecks.yml
@@ -26,7 +26,10 @@ jobs:
         with:
           title: Link Checker Report
           content-filepath: ./lychee/out.md
-          labels: ["Bot", "Type: Documentation", "Type: Bug"]
+          labels:
+            - "Bot"
+            - "Type: Documentation"
+            - "Type: Bug"
 
       - name: Fail Workflow On Link Errors
         if: steps.lychee.outputs.exit_code != 0
